; ModuleID = '/home/carl/AnghaBench/linux/arch/powerpc/platforms/pseries/extr_mobility.c_migration_store.c'
source_filename = "/home/carl/AnghaBench/linux/arch/powerpc/platforms/pseries/extr_mobility.c_migration_store.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.class = type { i32 }
%struct.class_attribute = type { i32 }

@EAGAIN = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.class*, %struct.class_attribute*, i8*, i64)* @migration_store to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @migration_store(%struct.class* %0, %struct.class_attribute* %1, i8* %2, i64 %3) #0 {
  %5 = alloca i32, align 4
  %6 = alloca %struct.class*, align 8
  %7 = alloca %struct.class_attribute*, align 8
  %8 = alloca i8*, align 8
  %9 = alloca i64, align 8
  %10 = alloca i32, align 4
  %11 = alloca i32, align 4
  store %struct.class* %0, %struct.class** %6, align 8
  store %struct.class_attribute* %1, %struct.class_attribute** %7, align 8
  store i8* %2, i8** %8, align 8
  store i64 %3, i64* %9, align 8
  %12 = load i8*, i8** %8, align 8
  %13 = call i32 @kstrtou64(i8* %12, i32 0, i32* %10)
  store i32 %13, i32* %11, align 4
  %14 = load i32, i32* %11, align 4
  %15 = icmp ne i32 %14, 0
  br i1 %15, label %16, label %18

16:                                               ; preds = %4
  %17 = load i32, i32* %11, align 4
  store i32 %17, i32* %5, align 4
  br label %45

18:                                               ; preds = %4
  %19 = call i32 (...) @stop_topology_update()
  br label %20

20:                                               ; preds = %30, %18
  %21 = load i32, i32* %10, align 4
  %22 = call i32 @rtas_ibm_suspend_me(i32 %21)
  store i32 %22, i32* %11, align 4
  %23 = load i32, i32* %11, align 4
  %24 = load i32, i32* @EAGAIN, align 4
  %25 = sub nsw i32 0, %24
  %26 = icmp eq i32 %23, %25
  br i1 %26, label %27, label %29

27:                                               ; preds = %20
  %28 = call i32 @ssleep(i32 1)
  br label %29

29:                                               ; preds = %27, %20
  br label %30

30:                                               ; preds = %29
  %31 = load i32, i32* %11, align 4
  %32 = load i32, i32* @EAGAIN, align 4
  %33 = sub nsw i32 0, %32
  %34 = icmp eq i32 %31, %33
  br i1 %34, label %20, label %35

35:                                               ; preds = %30
  %36 = load i32, i32* %11, align 4
  %37 = icmp ne i32 %36, 0
  br i1 %37, label %38, label %40

38:                                               ; preds = %35
  %39 = load i32, i32* %11, align 4
  store i32 %39, i32* %5, align 4
  br label %45

40:                                               ; preds = %35
  %41 = call i32 (...) @post_mobility_fixup()
  %42 = call i32 (...) @start_topology_update()
  %43 = load i64, i64* %9, align 8
  %44 = trunc i64 %43 to i32
  store i32 %44, i32* %5, align 4
  br label %45

45:                                               ; preds = %40, %38, %16
  %46 = load i32, i32* %5, align 4
  ret i32 %46
}

declare dso_local i32 @kstrtou64(i8*, i32, i32*) #1

declare dso_local i32 @stop_topology_update(...) #1

declare dso_local i32 @rtas_ibm_suspend_me(i32) #1

declare dso_local i32 @ssleep(i32) #1

declare dso_local i32 @post_mobility_fixup(...) #1

declare dso_local i32 @start_topology_update(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
